      st-scroll-view-Remove-scrollbars-references-on-dispose.patch:
      - Fix crash on theme changes
    + ubuntu/search-call-XUbuntuCancel-method-on-providers-when-no-dat.patch:
      - stop searches when requested from UI
    + magnifier-Show-cursor-when-magnifier-is-enabled-and-scale.patch:
      - Show monitor scaled cursor when magnifier is enabled

 -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Mon, 29 Apr 2019 17:29:23 -0500

gnome-shell (3.32.1-1) experimental; urgency=medium

  [ Simon McVittie ]
  * d/rules: Create a temporary HOME, XDG_RUNTIME_DIR for the unit tests.
    This goes some way towards fixing test failures and FTBFS on buster's
    sbuild, as deployed on the s390x buildd.
  * d/.gitignore: Add

  [ Laurent Bigonville ]
  * New upstream release

 -- Laurent Bigonville <bigon@debian.org>  Mon, 22 Apr 2019 15:45:49 +0200

gnome-shell (3.32.0+git20190410-1ubuntu1) disco; urgency=medium

  * Merging with debian git snapshot (LP: #1820775, LP: #1818790),
    remaining changes:
    + Replace gnome-backgrounds dep with ubuntu-wallpapers and Suggests
      gnome-themes-standard-data, gnome-backgrounds
    + Add some Recommends:
      - ubuntu-session (| gnome-session) to have the ubuntu session available
      - xserver-xorg-legacy
      - yaru-theme-gnome-shell for the default ubuntu theming
    + Update debian/gbp.conf with Ubuntu settings
    + gnome-shell-common.install: Install Ubuntu mode
    + gnome-shell-common.prerm: Remove deprecated ubuntu theme alternative
    + ubuntu/desktop_detect.patch:
      - add caching for desktop detection to avoid querying the current
        desktop env variable as iterate through the list each time. For the
        time of the Shell process, we can expect this env variable to stay
        stable.
    + ubuntu/smarter_alt_tab.patch:
      - quick alt-tab (without showing up the switcher) switch only between
        the last window of the last 2 applications to be focused instead of