@@ -56,6 +56,8 @@ gnome-shell (3.32.1-1ubuntu1) UNRELEASED; urgency=medium
       - stop searches when requested from UI
     + magnifier-Show-cursor-when-magnifier-is-enabled-and-scale.patch:
       - Show monitor scaled cursor when magnifier is enabled
+  * d/p/magnifier-Show-cursor-when-magnifier-is-enabled-and-scale.patch:
+    - Handle the no-monitor case (LP: #1826797)
 
  -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Mon, 29 Apr 2019 17:29:23 -0500
 
